add orderButton + change colors

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                               skills every day.
                           </font>
                        </h3>
-                       <button><b><a href="./pizza-menu.html">MyProject</a></b></button>
+                       <button><b><a href="./pizza-menu.html"><font color="#FF5C00"><u>MyProjects</u></font></a></b></button>
                         </center>
                     </td>
                 </tr>
@@ -56,7 +56,7 @@
           <section id="services">
                 <br><br><br><br><br><br>
                 <table width="100%">
-                  <a href="#home"><center><h1><font color="#00eaff"><u>Services</u></font></h1></center><br><br><br><br><br><br></a>
+                  <a href="#header"><center><h1><font color="#00eaff"><u>Services</u></font></h1></center><br><br><br><br><br><br></a>
                   <tr>
                       <td>
                             <ul>
